[package]
name = "lesp"
version = "0.1.0"
authors = ["dzharvis"]
edition = "2018"

[[bin]]
name = "lesp"
path = "src/main.rs"

[features]
default = ["web-spa"]
web-spa = ["yew", "stdweb", "serde_json", "serde_derive", "serde"]

[dependencies]
regex = "1.1.0"
serde = {version = "1.0", optional = true}
serde_derive = {version = "1.0", optional = true}
serde_json = {version = "1.0", optional = true}
stdweb = {version = "0.4", optional = true}
yew = {version = "0.4.0", optional = true}
